--- a/package.json
+++ b/package.json
@@ -29,8 +29,17 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "bootstrap": "^4.2.1",
+    "bulma": "^0.7.2",
+    "css-loader": "^2.1.0",
     "express": "^4.16.4",
-    "superagent": "^4.0.0-beta.5"
+    "knex": "^0.16.3",
+    "react-bulma-components": "^2.3.0",
+    "reactstrap": "^7.1.0",
+    "sqlite3": "^4.0.6",
+    "style-loader": "^0.23.1",
+    "superagent": "^4.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -42,8 +51,10 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "jest": "^23.6.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
