--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "acorn-dynamic-import": "^4.0.0",
     "bootstrap": "^4.2.1",
     "bulma": "^0.7.2",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
     "react-bulma-components": "^2.3.0",
+    "react-router-dom": "^4.3.1",
     "reactstrap": "^7.1.0",
+    "sqlite": "^3.0.1",
     "sqlite3": "^4.0.6",
     "style-loader": "^0.23.1",
     "superagent": "^4.1.0"
